--- a/Index/index.html
+++ b/Index/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--Title-->
-    <title>Platzi Video</title>
+    <title>Neo Video</title>
 
     <!--Header del index-->
     <link rel="stylesheet" href="./css/styles_header-index.css">
