Mejoramos los media queris, los degradados del body, añadimos imagenes al carrousel

--- a/Register/register.html
+++ b/Register/register.html
@@ -6,25 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Regístro</title>
 
+    <!--Favicon-->
+    <link rel="icon" href="../assets/img/core.ico">
     <!--Header-->
     <link rel="stylesheet" href="../css/styles_header.css">
     <!--Registro-->
     <link rel="stylesheet" href="./css/styles_register.css">
     <!--Footer-->
     <link rel="stylesheet" href="../css/styles_footer.css">
-    
+   
     <!-- Font -->
     <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
-</head>
-<style>
-    body
-{
-    margin: 0;
-    font-family: 'Muli', sans-serif;
-    background: linear-gradient(#21c08b, #ab88ff);
-}
 
-</style>
+    <!--Estilos Genericos-->
+    <link rel="stylesheet" href="../css/generic.css">  
+
+   <!--Media Tablet-->
+    <link rel="stylesheet" href="../css/tablet.css" media="screen and (max-width:900px)">
+
+   <!--Media Phone-->
+   <link rel="stylesheet" href="../css/phone.css" media="screen and (max-width:600px)">
+</head>
+
 <body>
 
 <!---->
