--- a/Error404/error.html
+++ b/Error404/error.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Error 404</title>
-
+    <!--Favicon-->
+    <link rel="icon" href="../assets/img/core.ico">
     <!--Header-->
     <link rel="stylesheet" href="../css/styles_header.css">
 
@@ -22,15 +23,7 @@
     <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
 </head>
 
-<style>
-    body
-{
-    margin: 0;
-    font-family: 'Muli', sans-serif;
-    background: linear-gradient(#21c08b, #ab88ff);
-}
 
-</style>
 <body>
 
     <header class="header">
